# OcfEngine

./: .clang-format  .gitignore  CMakeLists.txt  OcfEngine.sln  README.md
engine/: CMakeLists.txt
engine/src/2d/: ActionComponent.cpp  Animation.cpp  Camera2D.cpp  CircleComponent.cpp  Component.cpp  DrawShape.cpp  Font.cpp  FontAtlas.cpp  FontFNT.cpp  FontFreeType.cpp  FontManager.cpp  Label.cpp  MoveComponent.cpp  Node2D.cpp  Sprite.cpp  SpriteFrame.cpp  SpriteFrameManager.cpp  SpriteSheetLoader.cpp  TMXLayer.cpp  TMXTiledMap.cpp  TMXXMLParser.cpp  XmlSpriteSheetLoader.cpp
engine/src/3d/: Camera3D.cpp  FirstPersonCamera.cpp  Mesh.cpp  MeshRenderer.cpp  Node3D.cpp  Skybox.cpp
engine/src/audio/: AudioCache.cpp  AudioCache.h  AudioDecoder.cpp  AudioDecoder.h  AudioDecoderManager.cpp  AudioDecoderManager.h  AudioDecoderMp3.cpp  AudioDecoderMp3.h  AudioDecoderOgg.cpp  AudioDecoderOgg.h  AudioDecoderWav.cpp  AudioEngine.cpp  AudioEngineImpl.cpp  AudioEngineImpl.h  AudioMacros.h  AudioPlayer.cpp
engine/src/core/: AutoreleasePool.cpp  CanvasItem.cpp  Console.cpp  Engine.cpp  Event.cpp  EventDispatcher.cpp  EventListenerKeyboard.cpp  EventListenerMouse.cpp  EventMouse.cpp  Game.cpp  GameObject.cpp  Image.cpp  MaxRectsBinPack.cpp  Node.cpp  Rect.cpp  Scene.cpp  Types.cpp  Viewport.cpp
engine/src/input/: Input.cpp  Keyboard.cpp  Mouse.cpp
engine/src/math/: MaxRectsBinPack.cpp  Rect.cpp
engine/src/platform/: Application.cpp  ApplicationBase.cpp  FileUtils.cpp  RenderView.cpp  RenderViewImpl.cpp
engine/src/renderer/: CustomCommand.cpp  Image.cpp  IndexBuffer.cpp  MeshCommand.cpp  OpenGLUtility.cpp  Program.cpp  ProgramState.cpp  QuadCommand.cpp  RenderCommand.cpp  RenderQueue.cpp  Renderer.cpp  Shader.cpp  ShaderManager.cpp  Texture2D.cpp  TextureAtlas.cpp  (+7 more)
ocf/renderer/: CMakeLists.txt  CustomCommand.cpp  CustomCommand.h  Image.cpp  MeshCommand.cpp  OpenGLUtility.cpp  Program.cpp  ProgramState.cpp  QuadCommand.cpp  RenderCommand.cpp  RenderCommand.h  RenderQueue.cpp  Renderer.cpp  Shader.cpp  ShaderManager.cpp  Texture2D.cpp  Texture2D.h  TextureAtlas.cpp  TextureAtlas.h  TextureCube.cpp  TextureManager.cpp  TrianglesCommand.cpp  TrianglesCommand.h  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.h
samples/2d-action/: AppDelegate.cpp  CMakeLists.txt  MainScene.cpp  MainScene.h  main.cpp
src/: Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Entity.cpp  Entity.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  OcfEngine.h  OcfEngine.vcxproj  OcfEngine.vcxproj.filters  Sprite.cpp  Sprite.h  Window.cpp  Window.h  main.cpp
src/2d/: ActionComponent.cpp  ActionComponent.h  Animation.cpp  Animation.h  CMakeLists.txt  Camera.cpp  Camera.h  Camera2D.cpp  Camera2D.h  CircleComponent.cpp  CircleComponent.h  Component.cpp  Component.h  DrawShape.cpp  DrawShape.h  Entity.cpp  Entity.h  Font.cpp  Font.h  FontAtlas.cpp  FontAtlas.h  FontFNT.cpp  FontFNT.h  FontFreeType.cpp  FontFreeType.h  FontManager.cpp  FontManager.h  IFontEngine.h  IndexedColorSprite.cpp  IndexedColorSprite.h  Label.cpp  Label.h  MoveComponent.cpp  MoveComponent.h  Node.cpp  Node.h  Node2D.cpp  Node2D.h  Scene.cpp  Scene.h  (+18 more)
src/3d/: CMakeLists.txt  Camera3D.cpp  Camera3D.h  FirstPersonCamera.cpp  FirstPersonCamera.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  Node3D.cpp  Node3D.h  Skybox.cpp  Skybox.h
src/audio/: AudioCache.cpp  AudioCache.h  AudioDecoder.cpp  AudioDecoder.h  AudioDecoderManager.cpp  AudioDecoderManager.h  AudioDecoderMp3.cpp  AudioDecoderMp3.h  AudioDecoderOgg.cpp  AudioDecoderOgg.h  AudioDecoderWav.cpp  AudioDecoderWav.h  AudioEngine.cpp  AudioEngine.h  AudioEngineImpl.cpp  AudioEngineImpl.h  AudioPlayer.cpp  AudioPlayer.h  CMakeLists.txt
src/base/: AutoreleasePool.cpp  AutoreleasePool.h  CMakeLists.txt  CanvasItem.cpp  CanvasItem.h  Config.h  Console.cpp  Console.h  Event.cpp  Event.h  EventDispatcher.cpp  EventDispatcher.h  EventKeyboard.cpp  EventKeyboard.h  EventListener.cpp  EventListener.h  EventListenerKeyboard.cpp  EventListenerKeyboard.h  EventListenerMouse.cpp  EventListenerMouse.h  EventMouse.cpp  EventMouse.h  FileUtils.cpp  FileUtils.h  Font.BAK  Font.cpp  Font.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Input.cpp  Input.h  Keyboard.cpp  Keyboard.h  Macros.h  MaxRectsBinPack.cpp  MaxRectsBinPack.h  Node.cpp  Node.h  (+13 more)
src/input/: CMakeLists.txt  Input.cpp  Input.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
src/platform/: Application.cpp  Application.h  ApplicationBase.cpp  ApplicationBase.h  CMakeLists.txt  GLView.cpp  GLView.h  GLViewImpl.cpp  GLViewImpl.h  PlatformMacros.h  RenderView.cpp  RenderView.h  RenderViewImpl.cpp  RenderViewImpl.h  Window.cpp  Window.h
src/renderer/: CMakeLists.txt  CmakeLists.txt  CustomCommand.cpp  CustomCommand.h  Image.BAK  Image.cpp  Image.h  MeshCommand.cpp  MeshCommand.h  OpenGLUtility.cpp  OpenGLUtility.h  Program.cpp  Program.h  ProgramState.cpp  ProgramState.h  QuadCommand.cpp  QuadCommand.h  RenderCommand.cpp  RenderCommand.h  RenderQueue.cpp  RenderQueue.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  Texture2D.cpp  Texture2D.h  TextureAtlas.cpp  TextureAtlas.h  TextureCube.cpp  TextureCube.h  TextureManager.BAK  TextureManager.cpp  TextureManager.h  TrianglesCommand.cpp  TrianglesCommand.h  Types.h  VertexArray.cpp  (+3 more)
src/scene/: CmakeLists.txt  MainScene.cpp  MainScene.h  Scene.cpp  Scene.h
src/ui/: CMakeLists.txt  UIBaseButton.cpp  UIBaseButton.h  UIButton.cpp  UIButton.h  UIButtonBase.cpp  UIButtonBase.h  UICheckBox.cpp  UICheckBox.h  UIContextMenu.cpp  UIContextMenu.h  UIMenu.cpp  UIMenu.h  UIMenuBar.cpp  UIMenuBar.h  UIMenuItem.cpp  UIMenuItem.h  UIRadioButton.cpp  UIRadioButton.h  UISlider.cpp  UISlider.h  UIWidget.cpp  UIWidget.h
tests/cpp-tests/: AppDelegate.cpp  AppDelegate.h  BaseTest.cpp  BaseTest.h  CMakeLists.txt  MainScene.cpp  MainScene.h  cpp-tests.vcxproj  cpp-tests.vcxproj.filters  main.cpp
tests/sandbox/: AppDelegate.cpp  BaseTest.cpp  BaseTest.h  CMakeLists.txt  MainScene.cpp  MainScene.h
tests/unit-tests/: CMakeLists.txt  main.cpp
(+320 files in other folders)
